--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
-numpy 
-pandas
-matplotlib
-scikit-learn
-seaborn
-pandas_profiling
-bs4
+numpy==1.26.4
+pandas==2.2.1
+matplotlib==3.8.3
+scikit-learn==1.4.1.post1
+seaborn==0.12.2
+pandas_profiling==3.6.6
+beautifulsoup4==4.12.3
+plotly==5.20.0
